// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceCard when place has forecast renders correctly 1`] = `
<div
  className="bg-white rounded-lg shadow-lg flex flex-row p-4 pl-0 max-w-sm hover:cursor-pointer"
  data-test-id="place-card"
  onClick={[MockFunction]}
  onKeyDown={[MockFunction]}
  role="button"
  tabIndex={0}
>
  <div
    className="flex-none w-24"
  >
    <img
      alt="clear sky"
      src="https://openweathermap.org/img/wn/01d@2x.png"
    />
  </div>
  <div
    className="flex-1 w-32"
  >
    <div
      className="text-2xl"
    >
      Paris
    </div>
    <span>
      80°F..98°F
    </span>
    <div>
      5
       m/s
    </div>
  </div>
</div>
`;

exports[`PlaceCard when place has no forecast renders correctly 1`] = `
<div
  className="bg-white rounded-lg shadow-lg flex flex-row p-4 pl-0 max-w-sm hover:cursor-pointer"
  data-test-id="place-card"
  onClick={[MockFunction]}
  onKeyDown={[MockFunction]}
  role="button"
  tabIndex={0}
>
  <div
    className="flex-none w-24"
  >
    <img
      alt="No data"
      src={{}}
    />
  </div>
  <div
    className="flex-1 w-32"
  >
    <div
      className="text-2xl"
    >
      Paris
    </div>
    <div
      className="text-xs text-right text-slate-400"
    >
      Updating...
    </div>
  </div>
</div>
`;
